workspace-sf/force-app/main/default/objects/NotaFiscal__c/NotaFiscal__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os dados das notas fiscais.</description>
    <label>Nota fiscal</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Tipo de Pagamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas fiscais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>