workspace-sf/force-app/main/default/objects/NotaFiscal__c/fields/AliquotaISS__c.field-meta.xml
<CustomField>
    <fullName>AliquotaISS__c</fullName>
    <label>Alíquota de ISS</label>
    <length>18</length>
    <type>Text</type>
</CustomField>