workspace-sf/force-app/main/default/objects/NotaFiscal__c/fields/CodigoNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>CodigoNotaFiscal__c</fullName>
    <formula>IF(ISPICKVAL(TipoNotaFiscal__c, &apos;NE&apos;), &apos;ZO&apos;, 
		IF(ISPICKVAL(TipoNotaFiscal__c, &apos;RF&apos;), &apos;ZQ&apos;, 
					IF(ISPICKVAL(TipoNotaFiscal__c, &apos;RJ&apos;), &apos;ZR&apos;,null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código da nota fiscal</label>
    <type>Text</type>
</CustomField>