workspace-sf/force-app/main/default/objects/NotaFiscal__c/fields/DataEmissaoNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>DataEmissaoNotaFiscal__c</fullName>
    <label>Data de Emissão Nota Fiscal</label>
    <required>true</required>
    <type>Date</type>
</CustomField>