workspace-sf/force-app/main/default/objects/NotaFiscal__c/fields/DestinoCheque__c.field-meta.xml
<CustomField>
    <fullName>DestinoCheque__c</fullName>
    <label>Destino de Cheque</label>
    <type>TextArea</type>
</CustomField>