workspace-sf/force-app/main/default/objects/NotaFiscal__c/fields/DigitoVerificador__c.field-meta.xml
<CustomField>
    <fullName>DigitoVerificador__c</fullName>
    <label>Dígito Verificador</label>
    <length>18</length>
    <type>Text</type>
</CustomField>