workspace-sf/force-app/main/default/objects/NotaFiscal__c/fields/FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamento__c</fullName>
    <label>Forma de Pagamento</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crédito em Conta Poupança</fullName>
            </value>
            <value>
                <fullName>Crédito em Conta Corrente</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>