workspace-sf/force-app/main/default/objects/NotaFiscal__c/fields/Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Pagamento__c</fullName>
    <label>Pagamento</label>
    <length>18</length>
    <referenceTo>Pagamento__x</referenceTo>
    <relationshipLabel>Notas fiscais</relationshipLabel>
    <relationshipName>NotasFiscais</relationshipName>
    <type>ExternalLookup</type>
</CustomField>