workspace-sf/force-app/main/default/objects/NotaFiscal__c/fields/StatusAprovacao__c.field-meta.xml
<CustomField>
    <fullName>StatusAprovacao__c</fullName>
    <label>Status da Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
                <default>true</default>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>