workspace-sf/force-app/main/default/objects/NotaFiscal__c/fields/TipoNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>TipoNotaFiscal__c</fullName>
    <label>Tipo da Nota Fiscal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NE</fullName>
                <label>NE - Nota Fiscal de Serviços</label>
            </value>
            <value>
                <fullName>RF</fullName>
                <label>RF - Recibo Pessoa Fisica</label>
            </value>
            <value>
                <fullName>RJ</fullName>
                <label>RJ - Recibo Pessoa Juridica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>